Revision history for {{$dist->name}}

{{$NEXT}}

  - Add /x to skip_plugins regexp.

4.206     2015-03-01T03:58:20Z

  - Remove Test::ChangesHasContent so that xt doesn't fail in CI.
    (Before Release CheckChangeHasContent remains.)

4.205     2015-02-28T18:12:15Z

  - Don't Gather files copied from release.

4.204     2015-02-28T03:54:45Z

  - Set authority to 'cpan:RWSTAUNER' by default so that the bundle
    operates on computers without a ~/.pause file.
  - Copy LICENSE from build to root and automatically commit it on release.
  - Add 'copy_files' attribute to specify additional files to copy from build.
  - Bump ReadmeAnyFromPod prereq and set 'phase' to 'release'.

4.203     2014-12-11T23:47:53Z

  - Trade Bugtracker and Repository for AutoMetaResources.
  - Put PkgVersion before other FileMunger plugins
  - Add local, perl5, and fatlib as no_index directories

4.202     2014-05-05T03:31:07Z

  - Bump prereq on @TestingMania to use Test::NoTabs instead of NoTabsTest.
  - Change README minter template from pod to markdown.

4.201     2014-02-01T16:40:02Z

  - Bump Dist::Zilla and Pod::Weaver prereqs for Encoding updates.

4.200     2014-02-01T16:19:23Z

  - Change Pod::Weaver::Plugin '-Encoding' for the new core '-SingleEncoding'.
    Thanks, Sergey Romanov!
  - Change generated README in repo root back to markdown to get metacpan urls.

4.102     2013-07-09T23:28:02Z

  - Add 'open_source' option which can be disabled for darkpan projects
    to exclude various cpan/meta/repo/xt/change log plugins.

4.101     2013-04-10T05:42:18Z

  [Test Fixes]
  - Fix unintentional failure to stringify dir arg to Git::Wrapper in tests
    to avoid test report failures with Git::Wrapper 0.028_96 dev release

4.100     2013-04-06T03:22:21Z

  - Add MintingProfile and use PluginBundle::Easy to generate mint files
  - Bump Pod::Weaver::Section::Support prereq to 1.005 and configure it
    to only link to metacpan (since that links to everything else).
